--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "@calmdownval/xml-sax",
-	"version": "0.0.4",
-	"type": "module",
-	"main": "src/index.mjs",
-	"types": "src/index.d.ts",
+	"version": "0.1.0",
+	"type": "commonjs",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"license": "MIT",
 	"description": "SAX style XML parser",
 	"keywords": [
@@ -15,7 +15,17 @@
 		"type": "git",
 		"url": "https://github.com/vaclavlahuta/xml-sax.git"
 	},
+	"scripts": {
+		"build": "tsc",
+		"prepublishOnly": "npm run build"
+	},
 	"devDependencies": {
-		"@types/node": "^12.12.7"
+		"@types/node": "12.x.x",
+		"@typescript-eslint/eslint-plugin": "2.x.x",
+		"@typescript-eslint/parser": "2.x.x",
+		"eslint": "6.x.x",
+		"eslint-import-resolver-typescript": "2.x.x",
+		"eslint-plugin-import": "2.x.x",
+		"typescript": "3.8.x"
 	}
 }
